// SF Legislation Analytics — Gold Layer Schema (DBML)
// ⚠️ ARCHIVED MILESTONE-2 SNAPSHOT — preserved as a record. Do NOT edit.
// The working source of truth is schema.dbml in this directory.
// Paste this into https://dbdiagram.io/d to render the ERD.
// Source of truth: ERD.md in this directory.

Project sf_legislation_analytics {
  database_type: 'PostgreSQL'
  Note: '''
    Final analytics (gold) layer for SF Board of Supervisors legislative data.
  '''
}

// ============================================================
// Dimensions
// ============================================================

Table dim_person {
  person_sk int [pk, note: 'Surrogate — regenerated per SCD2 version']
  person_id int [not null, note: 'Legistar PersonId — shared across versions']
  full_name text [not null]
  district int [note: '1-11; NULL for non-Supervisors']
  party text [note: 'From biographical scrape; nullable']
  gender text [note: 'From biographical scrape; nullable']
  birth_date date [note: 'From biographical scrape; age derived at query time']
  supervisor_term_start date
  supervisor_term_end date [note: 'NULL if currently serving']
  effective_from date [not null]
  effective_to date [note: 'NULL if current']
  is_current boolean [not null]

  Note: '''
    SCD2 — one row per person-version.
    Multiple rows per real person when tracked attributes change.
  '''
}

Table dim_committee {
  committee_sk int [pk]
  committee_id int [not null, note: 'Legistar BodyId']
  committee_name text [not null]
  committee_type text [note: 'Full Board / Standing Committee / Special']
  is_active boolean

  Note: 'Bodies — committees and the full Board. Flat dimension.'
}

Table dim_matter {
  matter_sk int [pk]
  matter_id int [not null, note: 'Legistar MatterId']
  matter_file text [note: 'File number, e.g. 240123']
  matter_title text
  matter_name text
  matter_type text [note: 'Ordinance / Resolution / Charter Amendment / Hearing / Mayoral Appointment']
  introduction_date date
  controlling_committee_sk int [ref: > dim_committee.committee_sk]
  requester text
  legistar_url text

  Note: '''
    One row per legislative item.
    No current_status column — derive from latest fact_matter_action.
  '''
}

Table dim_subject {
  subject_sk int [pk]
  subject_id int [not null, note: 'Legistar IndexId']
  subject_name text [not null, note: 'Housing, Transportation, Public Safety, etc.']

  Note: 'Legistar subject index — joined to matters via bridge_matter_subject.'
}

Table dim_document {
  document_sk int [pk]
  document_id int [not null, note: 'Legistar MatterAttachmentId']
  document_title text
  document_url text
  document_type text [note: 'Bill Text / Amendment / Letter / etc.']
  body_text text [note: 'Scraped content; NULL if fetch failed']
  scraped_at timestamptz

  Note: 'Documents linked to matters, with scraped body text.'
}

Table dim_meeting {
  meeting_sk int [pk]
  meeting_id int [not null, note: 'Legistar EventId']
  committee_sk int [ref: > dim_committee.committee_sk]
  meeting_date date
  meeting_time time
  location text
  agenda_url text
  minutes_url text

  Note: 'Meetings — committee meetings and full Board sessions.'
}

// ============================================================
// Facts
// ============================================================

Table fact_matter_action {
  matter_action_sk int [pk]
  matter_sk int [ref: > dim_matter.matter_sk]
  meeting_sk int [ref: > dim_meeting.meeting_sk]
  action_type_code text [not null, note: 'CHECK: INTRODUCED, REFERRED, PASSED_COMMITTEE, PASSED_BOARD_1ST_READING, PASSED_BOARD_2ND_READING, SIGNED_BY_MAYOR, VETOED, WITHDRAWN']
  action_date date
  action_text text [note: 'Raw Legistar action label — traceability back through silver to bronze']

  Note: '''
    Single source of truth for matter lifecycle.
    Grain: one row per (matter, meeting, action).
    Natural key: (matter_id, meeting_id, action_type_code).
  '''
}

Table fact_vote {
  vote_sk int [pk]
  matter_sk int [ref: > dim_matter.matter_sk]
  meeting_sk int [ref: > dim_meeting.meeting_sk]
  person_sk int [ref: > dim_person.person_sk, note: 'SCD2 row valid at vote_date']
  vote_date date
  vote_value text [not null, note: 'CHECK: Aye, Nay, Excused, Absent']
  motion_text text [note: 'What are we voting on — preserves the motion language']

  Note: '''
    Per-person Board roll-call votes only.
    Committee votes and voice/unanimous votes live in fact_matter_action.
    Grain: one row per (matter, meeting, person).
    Natural key: (matter_id, meeting_id, person_id).
  '''
}

Table fact_committee_membership {
  membership_sk int [pk]
  person_sk int [ref: > dim_person.person_sk]
  committee_sk int [ref: > dim_committee.committee_sk]
  position text [not null, note: 'CHECK: Chair, Vice Chair, Member']
  effective_from date [not null]
  effective_to date [note: 'NULL if current']
  is_current boolean

  Note: '''
    SCD2-shaped fact for tenure on a committee.
    Grain: one row per (person, committee, position, effective_from).
  '''
}

// ============================================================
// Bridges (many-to-many)
// ============================================================

Table bridge_matter_subject {
  matter_sk int [ref: > dim_matter.matter_sk]
  subject_sk int [ref: > dim_subject.subject_sk]

  Indexes {
    (matter_sk, subject_sk) [pk]
  }

  Note: 'M:M matters and subjects.'
}

Table bridge_matter_sponsor {
  matter_sk int [ref: > dim_matter.matter_sk]
  person_sk int [ref: > dim_person.person_sk, note: 'SCD2 row valid at introduction_date']
  sponsor_type text [not null, note: 'CHECK: Primary, Co']

  Indexes {
    (matter_sk, person_sk, sponsor_type) [pk]
  }

  Note: 'M:M matters and persons (sponsors). sponsor_type distinguishes primary from co-sponsors.'
}

Table bridge_matter_document {
  matter_sk int [ref: > dim_matter.matter_sk]
  document_sk int [ref: > dim_document.document_sk]

  Indexes {
    (matter_sk, document_sk) [pk]
  }

  Note: 'M:M matters and documents.'
}
